--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KoiStory"
         tools:targetApi="31">
+        <receiver
+            android:name=".ui.widget.KoiWidget"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/koi_widget_info" />
+        </receiver>
+        <service
+            android:name=".ui.widget.StackWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+        </service>
+
         <activity
             android:name=".ui.view.add_story.CameraActivity"
             android:exported="false" />
