--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -20,6 +22,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KoiStory"
         tools:targetApi="31">
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+AIzaSyAwByhwIaLU5CKYvuWBnrVWsuPJjQRqevA
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDoJ1l6mpOsg1hAjX51lFGnKgCbJ_-OxaI" />
+
+        <activity
+            android:name=".ui.view.maps.MapsActivity"
+            android:exported="true"
+            android:label="@string/title_activity_maps">
+        </activity>
         <receiver
             android:name=".ui.widget.KoiWidget"
             android:exported="false">
@@ -31,10 +56,11 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/koi_widget_info" />
         </receiver>
+
         <service
             android:name=".ui.widget.StackWidgetService"
-            android:permission="android.permission.BIND_REMOTEVIEWS"
-            android:exported="true">
+            android:exported="true"
+            android:permission="android.permission.BIND_REMOTEVIEWS">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
